# devils-receipt

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
evals/: run_eval.py
evals/fixtures/: brief_fabricated.md  brief_good.md  brief_null.md  evidence_empty.json  evidence_sample.json
src/devils_receipt/: __init__.py  __main__.py  refute.py  verify.py
src/devils_receipt/collectors/: __init__.py  github.py  gnews.py  hackernews.py  http.py  news_quality.py  reddit_keyless.py  relevance.py
tests/: test_refute.py  test_verify.py
